Bug 396298 - Failed to compile because of call to Vc::isnan in kis_gauss_rect_mask_generator.cpp
Summary: Failed to compile because of call to Vc::isnan in kis_gauss_rect_mask_generat...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: vanyossi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-07-08 01:31 UTC by Pierre "bloodywing" Geier
Modified: 2018-07-10 12:53 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Patch (736 bytes, patch)
2018-07-08 01:31 UTC, Pierre "bloodywing" Geier
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pierre "bloodywing" Geier 2018-07-08 01:31:52 UTC
Created attachment 113822 [details]
Patch

Hello

I can't compile current master of krita.
I wrote a patch.


The issue is that for me isnan from Vc gets called in kis_gauss_rect_mask_generator.cpp line 103 instead of the one from the std. Resulting in a compilation error.
Comment 1 Scott Petrovic 2018-07-08 02:21:32 UTC
what version of gcc are you on? I had the same issue earlier and upgraded my version to 6.4. I think I was on 5.3 previously
Comment 2 Pierre "bloodywing" Geier 2018-07-08 12:12:44 UTC
Yes I have gcc 5.4 it's the current stable in Funtoo Linux, the other versions are masked.

I try to upgrade my gcc but really don't like it compared to simply using the correct namespace :)
Comment 3 wolthera 2018-07-08 13:04:17 UTC
Assigning this to ghevan/ivanyossi who touched this code.
Comment 4 Halla Rempt 2018-07-10 12:53:26 UTC
Git commit 3d0e377ca6d53c48f8a5b4f8944f93f4a9001172 by Boudewijn Rempt.
Committed on 10/07/2018 at 12:52.
Pushed by rempt into branch 'master'.

Use std::isnan instead of bare isnan

Patch by Pierre Geier.

M  +1    -1    libs/image/kis_gauss_rect_mask_generator.cpp

https://commits.kde.org/krita/3d0e377ca6d53c48f8a5b4f8944f93f4a9001172