Use std::isnan instead of bare isnan

Patch by Pierre Geier.
BUG:396298